Item3/nohup.out
  File "gestionClaves.py", line 6
    from flask import Flask, requestsapp = Flask(__name__)
                                         ^
SyntaxError: invalid syntax
  File "gestionClaves.py", line 6
    from flask import Flask, requestsapp = Flask(__name__)
                                         ^
SyntaxError: invalid syntax
  File "gestionClaves.py", line 6
    from flask import Flask, requestsapp = Flask(__name__)
                                         ^
SyntaxError: invalid syntax
 * Serving Flask app "gestionClaves" (lazy loading)
 * Environment: production
   WARNING: This is a development server. Do not use it in a production deployment.
   Use a production WSGI server instead.
 * Debug mode: off
 * Running on https://0.0.0.0:5800/ (Press CTRL+C to quit)
username:  sebaSalvo  password:  salvoSalvo  hash:  c3a40447f615086a2bf8a25f9d67bd5e2679cb61c2915d7b089c5679bba7c5a2
127.0.0.1 - - [08/Jul/2024 20:22:03] "[37mPOST /registro/ET HTTP/1.1[0m" 200 -
username:  benjaminSilva  password:  silvaSilva  hash:  76121ff8cb427362b7ffcf70117f7c010ada4fd28a55ff9be8efc8ee33c28bbb
127.0.0.1 - - [08/Jul/2024 20:22:47] "[37mPOST /registro/ET HTTP/1.1[0m" 200 -
127.0.0.1 - - [08/Jul/2024 20:24:41] "[37mPOST /ingreso/ET HTTP/1.1[0m" 200 -
127.0.0.1 - - [08/Jul/2024 20:24:48] "[37mPOST /ingreso/ET HTTP/1.1[0m" 200 -
